--- a/for-agents.html
+++ b/for-agents.html
@@ -477,7 +477,7 @@
 
 <!-- FOOTER -->
 <footer class="footer">
-  <p>© 2026 homeAImatch · <a href="index.html" style="color:var(--blue)">homeaimatch.com</a> · Cork, Ireland</p>
+  <p>© 2026 homeAImatch · <a href="index.html" style="color:var(--blue)">homeaimatch.com</a> · Cork, Ireland · <a href="legal.html" style="color:var(--gray)">Terms</a> · <a href="legal.html#privacy" style="color:var(--gray)">Privacy</a></p>
 </footer>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
