--- a/legal.html
+++ b/legal.html
@@ -59,7 +59,7 @@
     </div>
 
     <h2>1. About homeAImatch</h2>
-    <p>homeAImatch ("we", "us", "the Platform") is operated by Miguel Fernandes, based in Cork, Ireland. The Platform provides an AI-powered property matching service that connects home buyers with estate agents and property listings.</p>
+    <p>homeAImatch ("we", "us", "the Platform") is operated from Cork, Ireland. The Platform provides an AI-powered property matching service that connects home buyers with estate agents and property listings.</p>
     <p>These Terms of Service ("Terms") govern your access to and use of homeaimatch.com and all related services. By accessing or using the Platform, you agree to be bound by these Terms.</p>
 
     <h2>2. Eligibility</h2>
@@ -123,7 +123,7 @@
     <p>We shall not be liable for any indirect, incidental, special, or consequential damages, including loss of profit, data, or business opportunity.</p>
 
     <h2>11. Termination</h2>
-    <p>You may close your account at any time by contacting us at hello@homeaimatch.com. We may suspend or terminate your account if you breach these Terms, with or without notice.</p>
+    <p>You may close your account at any time by contacting us at <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ee868b828281ae8681838b8f87838f9a8d86c08d8183">[email&#160;protected]</a>. We may suspend or terminate your account if you breach these Terms, with or without notice.</p>
     <p>Upon termination, your data will be handled in accordance with our Privacy Policy.</p>
 
     <h2>12. Governing Law</h2>
@@ -134,7 +134,7 @@
 
     <h2>14. Contact</h2>
     <p>For questions about these Terms, contact us at:<br/>
-    <strong>Email:</strong> hello@homeaimatch.com<br/>
+    <strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c2aaa7aeaead82aaadafa7a3abafa3b6a1aaeca1adaf">[email&#160;protected]</a><br/>
     <strong>Address:</strong> Cork, Ireland</p>
   </div>
 
@@ -150,11 +150,11 @@
     </div>
 
     <h2>1. Data Controller</h2>
-    <p>The data controller for your personal data is:</p>
-    <p><strong>Miguel Fernandes</strong><br/>
+    <p>The data controller for your personal data is homeAImatch:</p>
+    <p><strong>The Founder</strong><br/>
     homeAImatch<br/>
     Cork, Ireland<br/>
-    hello@homeaimatch.com</p>
+    <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="fc9499909093bc949391999d95919d889f94d29f9391">[email&#160;protected]</a></p>
     <p>As we are based in Ireland, the relevant supervisory authority is the <a href="https://www.dataprotection.ie" target="_blank">Data Protection Commission (DPC)</a>.</p>
 
     <h2>2. What Data We Collect</h2>
@@ -224,7 +224,7 @@
       <li><strong>Right to Object (Art. 21):</strong> Object to processing based on legitimate interests</li>
       <li><strong>Right to Withdraw Consent:</strong> Withdraw consent at any time without affecting the lawfulness of prior processing</li>
     </ul>
-    <p>To exercise any of these rights, contact us at hello@homeaimatch.com. We will respond within 30 days.</p>
+    <p>To exercise any of these rights, contact us at <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4d25282121220d252220282c24202c392e25632e2220">[email&#160;protected]</a>. We will respond within 30 days.</p>
     <p>You also have the right to lodge a complaint with the Irish Data Protection Commission at <a href="https://www.dataprotection.ie" target="_blank">dataprotection.ie</a>.</p>
 
     <h2>9. Children's Privacy</h2>
@@ -238,7 +238,7 @@
 
     <h2>12. Contact</h2>
     <p>For privacy-related questions or to exercise your rights:<br/>
-    <strong>Email:</strong> hello@homeaimatch.com<br/>
+    <strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="91f9f4fdfdfed1f9fefcf4f0f8fcf0e5f2f9bff2fefc">[email&#160;protected]</a><br/>
     <strong>Address:</strong> Cork, Ireland</p>
   </div>
 
@@ -270,7 +270,7 @@
     <p>You can control cookies through your browser settings. Note that disabling essential cookies may prevent the agent dashboard from functioning correctly.</p>
 
     <h2>4. Contact</h2>
-    <p>For questions about our cookie practices, contact hello@homeaimatch.com.</p>
+    <p>For questions about our cookie practices, contact <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2048454c4c4f60484f4d4541494d415443480e434f4d">[email&#160;protected]</a>.</p>
   </div>
 
   <!-- ============================================================ -->
@@ -308,7 +308,7 @@
     <p>No fully automated decisions with legal or similarly significant effects are made about you. AI assists in matching and scoring, but all property decisions are made by you and the agents you interact with.</p>
 
     <h2>5. Your Rights</h2>
-    <p>Under GDPR Article 22, you have the right not to be subject to decisions based solely on automated processing. If you believe an AI-generated output has affected you unfairly, contact us at hello@homeaimatch.com and we will review the matter manually.</p>
+    <p>Under GDPR Article 22, you have the right not to be subject to decisions based solely on automated processing. If you believe an AI-generated output has affected you unfairly, contact us at <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="49212c252526092126242c282024283d2a21672a2624">[email&#160;protected]</a> and we will review the matter manually.</p>
   </div>
 </div>
 
@@ -316,27 +316,4 @@
   <p>© 2026 homeAImatch · <a href="index.html">homeaimatch.com</a> · Cork, Ireland</p>
 </footer>
 
-<script>
-function switchLegalTab(id) {
-  document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-  event.target.classList.add('active');
-  // Update URL hash
-  history.replaceState(null, '', '#' + id);
-  window.scrollTo(0, 0);
-}
-// Handle direct link with hash
-if (window.location.hash) {
-  const id = window.location.hash.slice(1);
-  const el = document.getElementById(id);
-  if (el) {
-    document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    el.classList.add('active');
-    document.querySelectorAll('.tab').forEach(t => { if (t.textContent.toLowerCase().includes(id === 'tos' ? 'terms' : id === 'ai' ? 'ai' : id)) t.classList.add('active'); });
-  }
-}
-</script>
-</body>
-</html>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-deco
