--- a/for-agents.html
+++ b/for-agents.html
@@ -412,7 +412,7 @@
         <div class="quote">"We were getting 50+ Daft enquiries a week but only converting 3-4. With homeAImatch, every lead comes with a match score. The 90%+ matches almost always book a viewing. Much less time wasted."</div>
         <div class="author">
           <div class="avatar">RC</div>
-          <div><div class="name">Rodrigo Costa</div><div class="role">Agency Owner, Lourinhã</div></div>
+          <div><div class="name">Rodrigo Almeida</div><div class="role">Agency Owner, Lourinhã</div></div>
         </div>
       </div>
     </div>
