--- a/para-agentes.html
+++ b/para-agentes.html
@@ -264,33 +264,33 @@
     <div class="features-grid">
       <div class="feature-card">
         <div class="feature-icon" style="background:var(--blue-l)">📩</div>
-        <h3>Lead Management</h3>
-        <p>See all enquiries with buyer profiles. Update status from New → Contacted → Viewing → Closed. Never lose track of a lead again.</p>
+        <h3>Gestão de Leads</h3>
+        <p>Veja todos os contactos com perfis de compradores. Atualize o estado: Novo → Contactado → Visita → Fechado. Nunca perca um lead.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:var(--orange-l)">🏘️</div>
-        <h3>Listing Management</h3>
-        <p>Add, edit, and manage your properties with our visual editor. Image previews, neighbourhood scoring, feature chips — everything the AI needs to match well.</p>
+        <h3>Gestão de Imóveis</h3>
+        <p>Adicione, edite e gira os seus imóveis com o nosso editor visual. Pré-visualização de imagens, avaliação do bairro, etiquetas — tudo o que a IA precisa para fazer boas correspondências.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:#e8f5e9">🔗</div>
-        <h3>Claim Listings</h3>
-        <p>Properties already on homeAImatch? Claim them with one click. Your contact details replace the placeholder and leads flow directly to you.</p>
+        <h3>Reivindicar Imóveis</h3>
+        <p>Imóveis já no homeAImatch? Reivindique-os com um clique. Os seus dados de contacto substituem o placeholder e os leads vão diretamente para si.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:#f3e5f5">🔔</div>
-        <h3>Instant Notifications</h3>
-        <p>Get notified the moment a buyer matches with your property. Fast response times = more viewings booked.</p>
+        <h3>Notificações Instantâneas</h3>
+        <p>Receba notificação assim que um comprador corresponde ao seu imóvel. Respostas rápidas = mais visitas marcadas.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:#fff8e1">📈</div>
-        <h3>Performance Analytics</h3>
-        <p>See which properties get the most views, which generate the most leads, and your conversion rates. Data-driven decisions.</p>
+        <h3>Análise de Desempenho</h3>
+        <p>Veja quais imóveis têm mais visualizações, quais geram mais leads e as suas taxas de conversão. Decisões baseadas em dados.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:var(--blue-l)">👤</div>
-        <h3>Agent Profile</h3>
-        <p>Build your professional profile. Buyers see your name, agency, and specialties on every matching property. Build your brand.</p>
+        <h3>Perfil de Agente</h3>
+        <p>Crie o seu perfil profissional. Os compradores veem o seu nome, agência e especialidades em cada imóvel correspondente. Construa a sua marca.</p>
       </div>
     </div>
   </div>
@@ -300,20 +300,20 @@
 <section class="section" id="how">
   <div class="section-inner">
     <div class="section-tag">Como Funciona</div>
-    <h2>Live in 5 minutes</h2>
-    <p class="subtitle">Getting started is fast and free. No contracts, no credit card, no commitment.</p>
+    <h2>Ativo em 5 minutos</h2>
+    <p class="subtitle">Começar é rápido e grátis. Sem contratos, sem cartão de crédito, sem compromisso.</p>
     <div class="how-grid">
       <div class="how-step fade-up">
-        <h3>Create your free account</h3>
-        <p>Sign up with your name, email, and agency. Takes 30 seconds. You're immediately in the dashboard.</p>
+        <h3>Crie a sua conta grátis</h3>
+        <p>Registe-se com nome, email e agência. Demora 30 segundos. Fica imediatamente no painel.</p>
       </div>
       <div class="how-step fade-up d1">
-        <h3>Add or claim your listings</h3>
-        <p>Either add new properties with our visual editor, or search for your existing listings and claim them with one click.</p>
+        <h3>Adicione ou reivindique imóveis</h3>
+        <p>Adicione novos imóveis com o nosso editor visual, ou procure os seus anúncios existentes e reivindique-os com um clique.</p>
       </div>
       <div class="how-step fade-up d2">
-        <h3>Receive AI-matched leads</h3>
-        <p>When a buyer's lifestyle profile matches your property, they can contact you directly. You see their full profile and match score.</p>
+        <h3>Receba leads qualificados por IA</h3>
+        <p>Quando o perfil de estilo de vida de um comprador corresponde ao seu imóvel, pode contactá-lo diretamente. Vê o perfil completo e o score de match.</p>
       </div>
     </div>
   </div>
@@ -323,14 +323,14 @@
 <section class="section" id="pricing" style="background:var(--gray-l)">
   <div class="section-inner">
     <div class="section-tag">Preços</div>
-    <h2>Only pay when it works</h2>
-    <p class="subtitle">Start free with 3 leads. Buy lead packs when you need more, or go unlimited for a flat monthly rate. You only pay for results.</p>
+    <h2>Só paga quando funciona</h2>
+    <p class="subtitle">Comece grátis com 3 leads. Escolha o plano que se adapta ao seu negócio. Só paga por resultados.</p>
     <div class="pricing-grid">
       <div class="price-card">
         <div class="price-card-body">
           <div class="tier" style="color:var(--gray)">Free</div>
           <div><span class="amount">€0</span></div>
-          <div class="desc">Try it — no card required</div>
+          <div class="desc">Experimente — sem cartão necessário</div>
           <a href="agent-dashboard.html" class="btn btn-outline" style="width:100%;justify-content:center;margin-bottom:20px">Começar</a>
           <div class="feat"><span class="check">✓</span> Up to 3 listings</div>
           <div class="feat"><span class="check">✓</span> <strong>3 leads grátis</strong> included</div>
@@ -344,10 +344,10 @@
       <div class="price-card">
         <div class="price-card-body">
           <div class="tier" style="color:var(--blue)">10 Lead Pack</div>
-          <div><span class="amount">€99</span><span class="per">one-time</span></div>
-          <div class="desc">€9.90 per lead</div>
-          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Buy Pack</a>
-          <div class="feat"><span class="check">✓</span> <strong>10 leads</strong> — use anytime</div>
+          <div><span class="amount">€99</span><span class="per">/mês</span></div>
+          <div class="desc">Até 50 imóveis</div>
+          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
+          <div class="feat"><span class="check">✓</span> <strong>10 leads/mês</strong></div>
           <div class="feat"><span class="check">✓</span> Up to 10 listings</div>
           <div class="feat"><span class="check">✓</span> Full buyer profiles</div>
           <div class="feat"><span class="check">✓</span> Lead management tools</div>
@@ -359,10 +359,10 @@
       <div class="price-card">
         <div class="price-card-body">
           <div class="tier" style="color:var(--blue)">25 Lead Pack</div>
-          <div><span class="amount">€199</span><span class="per">one-time</span></div>
-          <div class="desc">€7.96 per lead — save 20%</div>
-          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Buy Pack</a>
-          <div class="feat"><span class="check">✓</span> <strong>25 leads</strong> — use anytime</div>
+          <div><span class="amount">€199</span><span class="per">/mês</span></div>
+          <div class="desc">Até 120 imóveis</div>
+          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
+          <div class="feat"><span class="check">✓</span> <strong>25 leads/mês</strong></div>
           <div class="feat"><span class="check">✓</span> Unlimited listings</div>
           <div class="feat"><span class="check">✓</span> Full buyer profiles</div>
           <div class="feat"><span class="check">✓</span> Lead management tools</div>
@@ -372,12 +372,12 @@
         </div>
       </div>
       <div class="price-card pop">
-        <div class="pop-badge">BEST VALUE</div>
+        <div class="pop-badge">MELHOR VALOR</div>
         <div class="price-card-body">
           <div class="tier" style="color:var(--orange)">Unlimited</div>
-          <div><span class="amount">€99</span><span class="per">/month</span></div>
-          <div class="desc">6-month minimum · unlimited leads</div>
-          <a href="agent-dashboard.html" class="btn btn-orange" style="width:100%;justify-content:center;margin-bottom:20px">Go Unlimited</a>
+          <div><span class="amount">€99</span><span class="per">/mês</span></div>
+          <div class="desc">Compromisso de 6 meses · leads ilimitados</div>
+          <a href="agent-dashboard.html" class="btn btn-orange" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever Ilimitado</a>
           <div class="feat"><span class="check">✓</span> <strong>Leads ilimitados</strong></div>
           <div class="feat"><span class="check">✓</span> Unlimited listings</div>
           <div class="feat"><span class="check">✓</span> Full buyer profiles & personas</div>
@@ -389,7 +389,7 @@
       </div>
     </div>
     <div style="text-align:center;margin-top:24px;font-size:13px;color:var(--gray);line-height:1.7;max-width:620px;margin-left:auto;margin-right:auto">
-      <strong>How lead credits work:</strong> Every time a buyer contacts you through homeAImatch, one lead credit is used. You always see that a new lead came in — but once your credits run out, the buyer's contact details are hidden until you top up or upgrade. No leads are ever lost.
+      <strong>Como funcionam os créditos de leads:</strong> Cada vez que um comprador o contacta através do homeAImatch, um crédito de lead é usado. Vê sempre que chegou um novo lead — mas quando os créditos acabam, os dados de contacto ficam ocultos até fazer upgrade. Nenhum lead se perde.
     </div>
   </div>
 </section>
@@ -398,21 +398,21 @@
 <section class="section testimonial-section">
   <div class="section-inner">
     <div class="section-tag">Early Adopters</div>
-    <h2>Built with agents, for agents</h2>
-    <p class="subtitle">We're working closely with agencies in Cork and Portugal to build exactly what you need.</p>
+    <h2>Feito com agentes, para agentes</h2>
+    <p class="subtitle">Estamos a trabalhar em estreita colaboração com agências em Cork e Portugal para construir exatamente o que precisa.</p>
     <div class="testimonial-grid">
       <div class="testimonial">
-        <div class="quote">"The buyer profiles are a game-changer. Instead of 'I'm interested in this property', I get a full picture of who they are, what they need, and why they matched. I can prepare for the viewing before they even walk in."</div>
+        <div class="quote">"Os perfis dos compradores são revolucionários. Em vez de 'Estou interessado neste imóvel', recebo uma imagem completa de quem são, o que precisam e porquê a correspondência. Posso preparar a visita antes mesmo de chegarem."</div>
         <div class="author">
           <div class="avatar">SO</div>
-          <div><div class="name">Sarah O'Brien</div><div class="role">Senior Negotiator, Cork</div></div>
+          <div><div class="name">Sarah O'Brien</div><div class="role">Negociadora Sénior, Cork</div></div>
         </div>
       </div>
       <div class="testimonial">
-        <div class="quote">"We were getting 50+ Daft enquiries a week but only converting 3-4. With homeAImatch, every lead comes with a match score. The 90%+ matches almost always book a viewing. Much less time wasted."</div>
+        <div class="quote">"Recebíamos mais de 50 contactos Idealista por semana mas só convertíamos 3-4. Com o homeAImatch, cada lead vem com um score de match. Os matches acima de 90% quase sempre marcam visita. Muito menos tempo perdido."</div>
         <div class="author">
           <div class="avatar">RC</div>
-          <div><div class="name">Rodrigo Almeida</div><div class="role">Agency Owner, Lourinhã</div></div>
+          <div><div class="name">Rodrigo Almeida</div><div class="role">Proprietário de Agência, Lourinhã</div></div>
         </div>
       </div>
     </div>
@@ -423,43 +423,43 @@
 <section class="section">
   <div class="section-inner">
     <div class="section-tag">FAQ</div>
-    <h2>Common questions</h2>
+    <h2>Perguntas comuns</h2>
     <div class="faq-list" style="margin-top:24px">
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">Is it really free to start?<span class="arrow">▾</span></div>
+        <div class="faq-q">É mesmo grátis para começar?<span class="arrow">▾</span></div>
         <div class="faq-a">Yes. You get 3 listings and 3 full leads completely free — no credit card, no trial period, no catch. It's enough to see the quality of buyer enquiries homeAImatch delivers before you spend a cent.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">What happens when I run out of lead credits?<span class="arrow">▾</span></div>
+        <div class="faq-q">O que acontece quando fico sem créditos de leads?<span class="arrow">▾</span></div>
         <div class="faq-a">You'll still see that a new lead came in and which property they're interested in — but the buyer's name, email, phone, and message will be hidden behind an upgrade prompt. This means no leads are ever lost. As soon as you buy a lead pack or upgrade to Unlimited, all pending leads are instantly unlocked and you can contact them.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">Do unused lead credits expire?<span class="arrow">▾</span></div>
+        <div class="faq-q">Os créditos de leads não usados expiram?<span class="arrow">▾</span></div>
         <div class="faq-a">No. Lead packs (10 or 25 credits) never expire. Use them at your own pace. The Unlimited plan gives you unlimited leads for as long as your subscription is active.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">How do buyers find my properties?<span class="arrow">▾</span></div>
+        <div class="faq-q">Como é que os compradores encontram os meus imóveis?<span class="arrow">▾</span></div>
         <div class="faq-a">Buyers take our 2-minute lifestyle quiz on homeaimatch.com. Our AI scores every property against their preferences across 10+ criteria including commute, neighbourhood vibe, schools, pet-friendliness, and more. If your property is a strong match, the buyer sees it in their results and can contact you directly.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">What counts as a "lead"?<span class="arrow">▾</span></div>
+        <div class="faq-q">O que conta como um "lead"?<span class="arrow">▾</span></div>
         <div class="faq-a">A lead is counted when a buyer fills out the contact form on one of your properties. Each unique buyer enquiry uses one credit. If the same buyer contacts you about a different property, that's a separate lead. Spam or clearly invalid enquiries are filtered and don't count against your credits.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">What information do I get about each lead?<span class="arrow">▾</span></div>
+        <div class="faq-q">Que informação recebo sobre cada lead?<span class="arrow">▾</span></div>
         <div class="faq-a">Name, email, phone (if provided), their message, and their AI-generated buyer profile — including budget, lifestyle priorities, must-haves, dealbreakers, and their match score with your specific property. It's like having a dossier before the first call.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">What's the commitment on the Unlimited plan?<span class="arrow">▾</span></div>
+        <div class="faq-q">Qual é o compromisso no plano Ilimitado?<span class="arrow">▾</span></div>
         <div class="faq-a">The Unlimited plan has a 6-month minimum commitment at €99/month (€594 total). After 6 months, it continues month-to-month and you can cancel anytime. If you're getting 10+ leads a month, Unlimited is cheaper than buying packs.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">Can I claim listings already on the platform?<span class="arrow">▾</span></div>
+        <div class="faq-q">Posso reivindicar imóveis já na plataforma?<span class="arrow">▾</span></div>
         <div class="faq-a">Yes! If your properties are already listed on homeAImatch, search for them in your dashboard and claim them with one click. Your contact details replace the placeholder and leads flow directly to your account.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
-        <div class="faq-q">What markets do you cover?<span class="arrow">▾</span></div>
-        <div class="faq-a">Currently Cork, Ireland and the Silver Coast / Lourinhã region of Portugal. We're expanding to more European markets throughout 2026. Interested in a different market? Contact us — early adopters get priority access.</div>
+        <div class="faq-q">Que mercados cobrem?<span class="arrow">▾</span></div>
+        <div class="faq-a">Atualmente Cork, Irlanda e a Costa de Prata / região de Lourinhã em Portugal. Estamos a expandir para mais mercados europeus ao longo de 2026. Interested in a different market? Contact us — early adopters get priority access.</div>
       </div>
     </div>
   </div>
